--- a/DDManager/pom.xml
+++ b/DDManager/pom.xml
@@ -69,7 +69,11 @@
 			<version>${spring.version}</version>
 			<scope></scope>
 		</dependency>
-
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
