--- a/DDManager/src/main/webapp/WEB-INF/jdbc.properties
+++ b/DDManager/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,5 +1,6 @@
 jdbc.driverClassName= com.mysql.jdbc.Driver
-jdbc.dialect=org.hibernate.dialect.MySQLDialect
+#jdbc.dialect=org.hibernate.dialect.MySQLDialect
+jdbc.dialect=org.hibernate.dialect.DerbyDialect
 jdbc.databaseurl=jdbc:mysql://localhost:3306/DDtManager
 jdbc.username=boum	
 jdbc.password=vachier
