--- a/DDManager/src/main/webapp/WEB-INF/web.xml
+++ b/DDManager/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>DDManager</display-name>
-	
+
 
 	<servlet>
 		<servlet-name>ddManager</servlet-name>
@@ -15,16 +15,35 @@
 		<servlet-name>ddManager</servlet-name>
 		<url-pattern>*.html</url-pattern>
 	</servlet-mapping>
-	
-	<welcome-file-list>
-    	<welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
 
-  <jsp-config>
-    <taglib>
-      <taglib-uri>/spring</taglib-uri>
-      <taglib-location>/WEB-INF/tld/spring-form.tld</taglib-location>
-    </taglib>
-  </jsp-config>
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
+	
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener
+		</listener-class>
+	</listener>
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
+			/WEB-INF/spring-security.xml
+		</param-value>
+	</context-param>
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<jsp-config>
+		<taglib>
+			<taglib-uri>/spring</taglib-uri>
+			<taglib-location>/WEB-INF/tld/spring-form.tld</taglib-location>
+		</taglib>
+	</jsp-config>
 
 </web-app>
